* adds type for customized entries * refines articles

--- a/src/markdowns/tech/1.md
+++ b/src/markdowns/tech/1.md
@@ -9,13 +9,11 @@ thumbnail: "./tech_images/1_thumbnail.png"
 
 # Promise.allSettled() and its async await syntax
 
-## What is Promise.allSettled()?
-
 `Promise.allSettled()` returns an array of object that describe the outcome of each promise, unlike `Promise.all()` that rejects on any rejected promise, it will always settle all the promises.
 
 ## How to get the value of each resolved promise?
 
-The MDN <abbr title="MDN doc"><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise/allSettled' target='_blank' rel='noopener noreferer'>doc</a></abbr> has introduced us a way to get the status of each promise. However, to get the value of each resolved promise as well as writing it in async await syntax, we can start by constructing 3 mocked promises:
+The MDN <abbr title="MDN doc"><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise/allSettled' target='_blank' rel='noopener noreferer'>doc</a></abbr> has introduced us a way to get the `status` of each promise. However, to get the `value` of each resolved promise as well as writing it in async await syntax, we can start by constructing 3 mocked promises:
 
 ```js
 const promise1 = Promise.resolve(1);
@@ -27,8 +25,7 @@ const promise3 = Promise.resolve(3);
 const promises = [promise1, promise2, promise3];
 ```
 
-Then we can resolve the promises:
-
+Then we can resolve the promises, I use <abbr title="MDN doc"><a href='https://developer.mozilla.org/en-US/docs/Glossary/IIFE' target='_blank' rel='noopener noreferer'>IIFE</a></abbr>, where <abbr title="MDN doc"><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void' target='_blank' rel='noopener noreferer'>void</a></abbr> is an operator to make the function an expression:
 ```js
 void async function() {
     const settledPromises = await Promise.allSettled(promises)
@@ -45,4 +42,12 @@ void async function() {
 }()
 ```
 
-The fulfilled promise will have `value` available, and the `rejected` promise will return its `reason`.
+You can also choose to use normal function invocation:
+```js
+async function settlePromises() {
+    // resolve logics here
+}
+await settlePromises()
+```
+
+The `fulfilled` promise will have `value` available, and the `rejected` promise will return its `reason`.
